paper_experimental_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:48:21
   |
48 |               let b = unsafe {
   |  _____________________^
49 | |                 let x_ptr = x.as_ptr() as *const i32;
50 | |                 *x_ptr.add(i * 5 + j)
51 | |             };
   | |_____________^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:58:14
   |
58 |     let p0 = unsafe { x.as_ptr() as *const i32 };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:59:14
   |
59 |     let p1 = unsafe { x.as_ptr().add(5) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:60:8
   |
60 |     if unsafe { (p1 as usize - p0 as usize) / std::mem::size_of::<i32>() } != 5 {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unnecessary `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:58:14
   |
58 |     let p0 = unsafe { x.as_ptr() as *const i32 };
   |              ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:60:8
   |
60 |     if unsafe { (p1 as usize - p0 as usize) / std::mem::size_of::<i32>() } != 5 {
   |        ^^^^^^ unnecessary `unsafe` block

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:78:9
   |
78 |     let mut goal = Coord {
   |         ----^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0503]: cannot use `start` because it was mutably borrowed
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:84:18
   |
82 |     let cursor = &mut start;
   |                  ---------- `start` is borrowed here
83 |
84 |     if coord_sum(start) != 4 {
   |                  ^^^^^ use of borrowed `start`
...
97 |     if shift_row(cursor) != 101 {
   |                  ------ borrow later used here

error[E0503]: cannot use `start` because it was mutably borrowed
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_005/target.rs:87:20
   |
82 |     let cursor = &mut start;
   |                  ---------- `start` is borrowed here
...
87 |     if coord_sum_s(start) != 5 {
   |                    ^^^^^ use of borrowed `start`
...
97 |     if shift_row(cursor) != 101 {
   |                  ------ borrow later used here

error: aborting due to 6 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0503`.